<?xml version="1.0"?>
<package format="2">
  <name>nappe_tracking_msgs</name>
  <version>0.0.1</version>
  <description>Message for Nappe Tracking</description>

  <author email="yili.jrl@gmail.com">Yili Qin</author>
  <maintainer email="yili.jrl@gmail.com">Yili Qin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
